--- a/schedule-app/package.json
+++ b/schedule-app/package.json
@@ -6,20 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "express-validator": "^6.6.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.14",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
-    "react-scripts": "^4.0.0"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
