--- a/schedule-app/package.json
+++ b/schedule-app/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.14",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-moment": "^1.0.0",
     "react-native": "^0.63.3",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
