--- a/schedule-app/package.json
+++ b/schedule-app/package.json
@@ -25,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,5 +42,8 @@
       "last 1 chrome version",
       "last 1 firefox version"
     ]
+  },
+  "engines": {
+    "node": "10.16.0"
   }
 }
